solc_mutator_ossfuzz_seed_corpus/test_sol/test_67914cef470b8d8e167fad7dafe8a1b6e504e1232ecf1bb0ef81edc18b208726_e0e9476b10ba544be481cb511b061de6a1418859_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
function f0(int160 i0)     returns(bytes memory o0)
{
  assembly
  {
    switch 115792089237316195423570985008687907853269984665640564039457584007913129639935
    case 115792089237316195423570985008687907853269984665640564039457584007913129639935
    {
    }
    case 75213140975760497292530569874664778403578698604030072250029502651283813998260
    {
      switch 0
      case 20527703546838506614591024031952623624375058211230055286610479878295013659356
      {
        calldatacopy(add(0x80, mod(i0, 1024)), sdiv(i0, 0), mod(45815256081711806807154550527857615865843925889969894488812358848779697509649, 1024))
      }
      case 88224152965052036265334450298821077220522399883380135266604432545930495467968
      {
        switch 115792089237316195423570985008687907853269984665640564039457584007913129639935
        case 115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
        }
        case 101531727323330876339151108689769232794676859650001111228174590190143428776688
        {
        }
      }
      case 104549391487376241198378570701373876416561403104226756601475432582561544127625
      {
        function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9, ai10) -> ao0, ao1, ao2, ao3
        {
        }
      }
      {
        o0 := add(calldatasize(), 69304296098583051430034344999775926910097616578774036266161425851850250011964)
      }
    }
    case 55308355246195553600005806065717987542556624654963625522345804607994941077561
    {
      return(add(0x80, mod(i0, 1024)), sload(i0))
    }
    default
    {
      o0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
      for 
      {
      }
      i0
      {
        codecopy(add(0x80, mod(i0, 1024)), i0, mod(i0, 1024))
        function af1() -> ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11
        {
          pop(ao5)
          switch gasprice()
          case 115792089237316195423570985008687907853269984665640564039457584007913129639935
          {
            mstore8(add(0x80, mod(calldataload(mod(ao10, calldatasize())), 2048)), ao10)
          }
          case 0
          {
            let al0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
            ao9 := mload(add(0x80, mod(mload(add(0x80, mod(99093656805938092090990634458164242608702172722109115924453398151529447238207, 2048))), 2048)))
            ao9 := 60772135703355243713312692906627762675911993467422158938902246397656103067647
          }
          switch 0
          case 112697812608491241397340514602939619884943972462246929561181474875298305434928
          {
            ao4 := 0
            sstore(ao8, mload(add(0x80, mod(i0, 1024))))
          }
          ao9 := 56020711826842767021246818833954208837307682937442693304980209697412609890959
        }
      }
      {
      }
      switch 71267581483406392580310470136562735752661565532006234248738654795362366082364
      case 0
      {
        for 
        {
          o0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
          switch 82996822987949165723938036518245333950709616712588721870883928727715825168656
          case 85790046253312937996068994336612557909065888788358957599472045044866060898590
          {
          }
        }
        i0
        {
        }
        {
          o0 := signextend(i0, 78044051972580157237821952674995460672794940869913797218144206759944761411216)
          selfdestruct(58894382993470105667566265835017546133250885936885217524069300541037783649218)
        }
      }
    }
    returndatacopy(add(0x80, mod(mload(add(0x80, mod(103710391900429730469045033519942190249811365739482729539312653552850826228295, 2048))), 1024)), 96581593548813349705583908273320405557403205575673649217075721784314284363296, mod(0, 1024))
  }
  bytes2 l0 = bytes2(0x0000);
}
// ----
// DeclarationError 6578: (su0.sol:2711-2713): Cannot access local Solidity variables from inside an inline assembly function.
